--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 
         socket.emit('mensaje', {nombre:'Andres'});
 
-        socket.on('mensaje', function(payload){
+        socket.on('nuevo-mensaje', function(payload){
             console.log('Escuchando:', payload);
         });
 
