--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,10 @@
             console.log('Escuchando:', payload);
         });
 
+        socket.on('active-bands', function(bands){
+            console.clear();
+            console.table(bands);
+        });
 
     </script>
     
